--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>jmx</groupId>
-	<artifactId>agent</artifactId>
+	<artifactId>jmxagent</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
